Adding Notes + Fixing Issues

--- a/force-app/main/default/lwc/salesforceExercise/salesforceExercise.html
+++ b/force-app/main/default/lwc/salesforceExercise/salesforceExercise.html
@@ -1,14 +1,16 @@
 <template>
     <lightning-card title="Create Flight" icon-name="custom:custom20">
         <div class="slds-p-around_medium">
-            <lightning-input label="Departure Airport IATA Code" onchange={handleDepartureChange}></lightning-input>
+            <lightning-input id="departureInput" label="Departure Airport IATA Code" onchange={handleDepartureChange}>
+            </lightning-input>
             <ul if:true={departureAirports}>
                 <template for:each={departureAirports} for:item="airport">
                     <li id={airport.IATA_Code__c} key={airport.Id} onclick={selectDepartureAirport}>{airport.Name} -
                         {airport.IATA_Code__c}</li>
                 </template>
             </ul>
-            <lightning-input label="Arrival Airport IATA Code" onchange={handleArrivalChange}></lightning-input>
+            <lightning-input id="arrivalInput" label="Arrival Airport IATA Code" onchange={handleArrivalChange}>
+            </lightning-input>
             <ul if:true={arrivalAirports}>
                 <template for:each={arrivalAirports} for:item="airport">
                     <li id={airport.IATA_Code__c} key={airport.Id} onclick={selectArrivalAirport}>{airport.Name} -
@@ -19,7 +21,8 @@
         </div>
         <template if:true={flight}>
             <div class="slds-p-around_medium">
-                <p>Flight created succesfully with the Id {flight.Id}</p>
+                <p>Flight Name: {flight.Name} </p>
+                <p>Flight Distance: {flight.Flight_Distance__c} km</p>
             </div>
         </template>
         <template if:true={error}>
